--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Rajendra SHELAR
-logo: /assets/img/logo2.png
+logo: /assets/img/logo2.jpg
 description: Minimal is a theme for GitHub Pages.
 show_downloads: true
 google_analytics:
