--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Rajendra SHELAR
 logo: /assets/img/logo2.jpg
-description: Minimal is a theme for GitHub Pages.
+description: Geo Infocomm Solution Archirect at GovTech Singapore
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-minimal
